syntax = "proto3";

option csharp_namespace = "PlatformService";

service GrpcPlatform {
    rpc GetAllPlatforms (GetAllRequest) returns (PlatformResponse);
}

message GetAllRequest {}

message GrpcPlatformModel{
    int32 plataformaId = 1;
    string nome = 2;
    string creador = 3;
}

message PlatformResponse {
    repeated GrpcPlatformModel platform = 1;
}